+ Added Mordor orcs in the Dagorlad biome
+ Added rare Dunlending spawns in the Enedwaith biome
+ Added dwarven and blue dwarven spears
+ Added Sarlluin and Sarncaran deposits underground within their respective biomes
+ Added additional ore generation at higher layers in all mountain biomes
+ Added the ability to light Beacons of Gondor with torches
+ Added cape names and descriptions to the language file
+ Added an automatic language file update-helper which adds any missing keys to LOTR language files to make updating them easier - see .minecraft/mods/LOTR_UpdatedLangFiles
+ Added an updated German translation
+ Added a configuration file option to disable mist in the Misty Mountains

* Increased the health of elves and dwarves
* Fixed dwarven merchants not spawning
* Banner bearers now carry banners in the left hand so they do not disappear in battle
* Banners now break instead of falling when the block below is removed
* Banners can now be placed on walls, and the 'Wall Banner' items have been removed for simplicity
* Reduced the speed at which hired NPCs heal without banner bearers nearby
* Near Haradrim now defend themselves with daggers
* Dunlending Bartenders now trade at Dunland alignment 0
* Fixed the hired NPC death message saying only 'died' instead of the specific cause of death
* Fixed NPCs dropping equipment too often
* Ent-draughts are now poisonous to enemies of Fangorn
* Players can no longer drink straight from ent jars
* Fixed mismatched warg armour rendering
* Fixed skeletal wraiths falling through the ground
* Removed the region of Brown Lands to the east of Mordor
* Hobbit Farmhouse roofs are now made of thatch blocks
* Fixed the orc bed crafting recipe giving the block instead of the item
* Changed the Uruk-hai cape and banner to the White Hand of Saruman
* Renamed some capes

Public Beta 18.2

+ Added randomly generated islands

* Fixed orc torches breaking when an adjacent block is updated
* Fixed spiders behaving strangely
